Entrega3/.antlr/E3Parser.java
// Generated from /media/alonso/Nuevo vol/Universidad/4º/Procesadores de Lenguaje/Laboratorio/Procesadores-de-Lenguajes/Entrega3/E3.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class E3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CV=1, ID=2, GVAR=3, LVAR=4, DP=5, NOMYAPE=6, FOTO=7, FECHA=8, BIO=9, CONTACTO=10, 
		EMAIL=11, TELEFONO=12, REDES=13, LINKEDIN=14, GITHUB=15, WEB=16, FORMACION=17, 
		OFICIAL=18, TITULO=19, EXPEDIDOR=20, DESCRIPCION=21, LOGROS=22, COMPLEMENTARIA=23, 
		CERTIFICADO=24, HORAS=25, IDIOMAS=26, IDIOMA=27, NIVEL=28, EXPERIENCIA=29, 
		LABORAL=30, PUESTO=31, RESPONSABILIDADES=32, VOLUNTARIADO=33, ORGANIZACION=34, 
		HABILIDADES=35, SOFT=36, HARD=37, HABILIDAD=38, NVHAB=39, CATEGORIA=40, 
		PORTAFOLIO=41, PROYECTO=42, NOMBRE=43, GRUPO=44, COMPANERO=45, TECNOLOGIAS=46, 
		MERITOS=47, LL_A=48, LL_C=49, PA_A=50, PA_C=51, IG=52, PYC=53, CO=54, 
		CD=55, ERR_COMMENT_CLOSE=56, COMMENT=57, TFNO=58, NUM=59, PAL=60, IDENT=61, 
		MAIL=62, RUTA=63, FECHA_NUM=64, BOOL=65, NVI=66, NVH=67, WS=68, CONJPAL=69, 
		CONJPALYNUM=70, ERROR=71;
	public static final int
		RULE_cvs = 0, RULE_global_var = 1, RULE_local_var = 2, RULE_variable = 3, 
		RULE_cv = 4, RULE_datospersonales = 5, RULE_nomyape = 6, RULE_foto = 7, 
		RULE_fecha = 8, RULE_bio = 9, RULE_contacto = 10, RULE_email = 11, RULE_telefono = 12, 
		RULE_redes = 13, RULE_linkedin = 14, RULE_github = 15, RULE_web = 16, 
		RULE_experiencia = 17, RULE_formacion = 18, RULE_oficial = 19, RULE_titulo = 20, 
		RULE_expedidor = 21, RULE_descripcion = 22, RULE_logros = 23, RULE_idiomas = 24, 
		RULE_idioma = 25, RULE_nvi = 26, RULE_complementaria = 27, RULE_certificado = 28, 
		RULE_laboral = 29, RULE_puesto = 30, RULE_responsabilidades = 31, RULE_voluntariado = 32, 
		RULE_organizacion = 33, RULE_habilidades = 34, RULE_soft = 35, RULE_hard = 36, 
		RULE_nvh = 37, RULE_habilidad = 38, RULE_categoria = 39, RULE_portafolio = 40, 
		RULE_proyecto = 41, RULE_nombre = 42, RULE_grupo = 43, RULE_companero = 44, 
		RULE_tecnologias = 45, RULE_merito = 46, RULE_horas = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"cvs", "global_var", "local_var", "variable", "cv", "datospersonales", 
			"nomyape", "foto", "fecha", "bio", "contacto", "email", "telefono", "redes", 
			"linkedin", "github", "web", "experiencia", "formacion", "oficial", "titulo", 
			"expedidor", "descripcion", "logros", "idiomas", "idioma", "nvi", "complementaria", 
			"certificado", "laboral", "puesto", "responsabilidades", "voluntariado", 
			"organizacion", "habilidades", "soft", "hard", "nvh", "habilidad", "categoria", 
			"portafolio", "proyecto", "nombre", "grupo", "companero", "tecnologias", 
			"merito", "horas"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'cv'", "'id'", "'gvar'", "'lvar'", "'datospersonales'", "'nomyape'", 
			"'foto'", "'fecha'", "'bio'", "'contacto'", "'email'", "'telefono'", 
			"'redes'", "'linkedin'", "'github'", "'web'", "'formacion'", "'oficial'", 
			"'titulo'", "'expedidor'", "'descripcion'", "'logros'", "'complementaria'", 
			"'certificado'", "'horas'", "'idiomas'", "'idioma'", "'nivel'", "'experiencia'", 
			"'laboral'", "'puesto'", "'responsabilidades'", "'voluntariado'", "'organizacion'", 
			"'habilidades'", "'soft'", "'hard'", "'habilidad'", "'nvhab'", "'categoria'", 
			"'portafolio'", "'proyecto'", "'nombre'", "'grupo'", "'companero'", "'tecnologias'", 
			"'meritos'", "'{'", "'}'", "'('", "')'", "'='", "';'", "','", "'\"'", 
			"'*/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CV", "ID", "GVAR", "LVAR", "DP", "NOMYAPE", "FOTO", "FECHA", "BIO", 
			"CONTACTO", "EMAIL", "TELEFONO", "REDES", "LINKEDIN", "GITHUB", "WEB", 
			"FORMACION", "OFICIAL", "TITULO", "EXPEDIDOR", "DESCRIPCION", "LOGROS", 
			"COMPLEMENTARIA", "CERTIFICADO", "HORAS", "IDIOMAS", "IDIOMA", "NIVEL", 
			"EXPERIENCIA", "LABORAL", "PUESTO", "RESPONSABILIDADES", "VOLUNTARIADO", 
			"ORGANIZACION", "HABILIDADES", "SOFT", "HARD", "HABILIDAD", "NVHAB", 
			"CATEGORIA", "PORTAFOLIO", "PROYECTO", "NOMBRE", "GRUPO", "COMPANERO", 
			"TECNOLOGIAS", "MERITOS", "LL_A", "LL_C", "PA_A", "PA_C", "IG", "PYC", 
			"CO", "CD", "ERR_COMMENT_CLOSE", "COMMENT", "TFNO", "NUM", "PAL", "IDENT", 
			"MAIL", "RUTA", "FECHA_NUM", "BOOL", "NVI", "NVH", "WS", "CONJPAL", "CONJPALYNUM", 
			"ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "E3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public E3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CvsContext extends ParserRuleContext {
		public Global_varContext global_var() {
			return getRuleContext(Global_varContext.class,0);
		}
		public List<CvContext> cv() {
			return getRuleContexts(CvContext.class);
		}
		public CvContext cv(int i) {
			return getRuleContext(CvContext.class,i);
		}
		public CvsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cvs; }
	}

	public final CvsContext cvs() throws RecognitionException {
		CvsContext _localctx = new CvsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cvs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GVAR) {
				{
				setState(96);
				global_var();
				}
			}

			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				cv();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CV );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Global_varContext extends ParserRuleContext {
		public TerminalNode GVAR() { return getToken(E3Parser.GVAR, 0); }
		public TerminalNode LL_A() { return getToken(E3Parser.LL_A, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode LL_C() { return getToken(E3Parser.LL_C, 0); }
		public Global_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_var; }
	}

	public final Global_varContext global_var() throws RecognitionException {
		Global_varContext _localctx = new Global_varContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(GVAR);
			setState(105);
			match(LL_A);
			setState(106);
			variable();
			setState(107);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Local_varContext extends ParserRuleContext {
		public TerminalNode LVAR() { return getToken(E3Parser.LVAR, 0); }
		public TerminalNode LL_A() { return getToken(E3Parser.LL_A, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode LL_C() { return getToken(E3Parser.LL_C, 0); }
		public Local_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_local_var; }
	}

	public final Local_varContext local_var() throws RecognitionException {
		Local_varContext _localctx = new Local_varContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_local_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LVAR);
			setState(110);
			match(LL_A);
			setState(111);
			variable();
			setState(112);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(E3Parser.IDENT, 0); }
		public TerminalNode IG() { return getToken(E3Parser.IG, 0); }
		public TerminalNode CONJPALYNUM() { return getToken(E3Parser.CONJPALYNUM, 0); }
		public TerminalNode PYC() { return getToken(E3Parser.PYC, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(IDENT);
			setState(115);
			match(IG);
			setState(116);
			match(CONJPALYNUM);
			setState(117);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CvContext extends ParserRuleContext {
		public TerminalNode CV() { return getToken(E3Parser.CV, 0); }
		public TerminalNode IDENT() { return getToken(E3Parser.IDENT, 0); }
		public TerminalNode LL_A() { return getToken(E3Parser.LL_A, 0); }
		public Local_varContext local_var() {
			return getRuleContext(Local_varContext.class,0);
		}
		public DatospersonalesContext datospersonales() {
			return getRuleContext(DatospersonalesContext.class,0);
		}
		public FormacionContext formacion() {
			return getRuleContext(FormacionContext.class,0);
		}
		public TerminalNode LL_C() { return getToken(E3Parser.LL_C, 0); }
		public IdiomasContext idiomas() {
			return getRuleContext(IdiomasContext.class,0);
		}
		public ExperienciaContext experiencia() {
			return getRuleContext(ExperienciaContext.class,0);
		}
		public HabilidadesContext habilidades() {
			return getRuleContext(HabilidadesContext.class,0);
		}
		public PortafolioContext portafolio() {
			return getRuleContext(PortafolioContext.class,0);
		}
		public CvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cv; }
	}

	public final CvContext cv() throws RecognitionException {
		CvContext _localctx = new CvContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(CV);
			setState(120);
			match(IDENT);
			setState(121);
			match(LL_A);
			setState(122);
			local_var();
			setState(123);
			datospersonales();
			setState(124);
			formacion();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDIOMAS) {
				{
				setState(125);
				idiomas();
				}
			}

			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXPERIENCIA) {
				{
				setState(128);
				experiencia();
				}
			}

			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HABILIDADES) {
				{
				setState(131);
				habilidades();
				}
			}

			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PORTAFOLIO) {
				{
				setState(134);
				portafolio();
				}
			}

			setState(137);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DatospersonalesContext extends ParserRuleContext {
		public TerminalNode DP() { return getToken(E3Parser.DP, 0); }
		public TerminalNode LL_A() { return getToken(E3Parser.LL_A, 0); }
		public NomyapeContext nomyape() {
			return getRuleContext(NomyapeContext.class,0);
		}
		public FechaContext fecha() {
			return getRuleContext(FechaContext.class,0);
		}
		public ContactoContext contacto() {
			return getRuleContext(ContactoContext.class,0);
		}
		public TerminalNode LL_C() { return getToken(E3Parser.LL_C, 0); }
		public FotoContext foto() {
			return getRuleContext(FotoContext.class,0);
		}
		public BioContext bio() {
			return getRuleContext(BioContext.class,0);
		}
		public DatospersonalesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datospersonales; }
	}

	public final DatospersonalesContext datospersonales() throws RecognitionException {
		DatospersonalesContext _localctx = new DatospersonalesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_datospersonales);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(DP);
			setState(140);
			match(LL_A);
			setState(141);
			nomyape();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FOTO) {
				{
				setState(142);
				foto();
				}
			}

			setState(145);
			fecha();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BIO) {
				{
				setState(146);
				bio();
				}
			}

			setState(149);
			contacto();
			setState(150);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NomyapeContext extends ParserRuleContext {
		public TerminalNode NOMYAPE() { return getToken(E3Parser.NOMYAPE, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public TerminalNode CONJPAL() { return getToken(E3Parser.CONJPAL, 0); }
		public TerminalNode IDENT() { return getToken(E3Parser.IDENT, 0); }
		public NomyapeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomyape; }
	}

	public final NomyapeContext nomyape() throws RecognitionException {
		NomyapeContext _localctx = new NomyapeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nomyape);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(NOMYAPE);
			setState(153);
			match(PA_A);
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==IDENT || _la==CONJPAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(155);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FotoContext extends ParserRuleContext {
		public TerminalNode FOTO() { return getToken(E3Parser.FOTO, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode RUTA() { return getToken(E3Parser.RUTA, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public FotoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foto; }
	}

	public final FotoContext foto() throws RecognitionException {
		FotoContext _localctx = new FotoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_foto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(FOTO);
			setState(158);
			match(PA_A);
			setState(159);
			match(RUTA);
			setState(160);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FechaContext extends ParserRuleContext {
		public TerminalNode FECHA() { return getToken(E3Parser.FECHA, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode FECHA_NUM() { return getToken(E3Parser.FECHA_NUM, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public FechaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fecha; }
	}

	public final FechaContext fecha() throws RecognitionException {
		FechaContext _localctx = new FechaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fecha);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(FECHA);
			setState(163);
			match(PA_A);
			setState(164);
			match(FECHA_NUM);
			setState(165);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BioContext extends ParserRuleContext {
		public TerminalNode BIO() { return getToken(E3Parser.BIO, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public TerminalNode CONJPALYNUM() { return getToken(E3Parser.CONJPALYNUM, 0); }
		public TerminalNode IDENT() { return getToken(E3Parser.IDENT, 0); }
		public BioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bio; }
	}

	public final BioContext bio() throws RecognitionException {
		BioContext _localctx = new BioContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(BIO);
			setState(168);
			match(PA_A);
			setState(169);
			_la = _input.LA(1);
			if ( !(_la==IDENT || _la==CONJPALYNUM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(170);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContactoContext extends ParserRuleContext {
		public TerminalNode CONTACTO() { return getToken(E3Parser.CONTACTO, 0); }
		public TerminalNode LL_A() { return getToken(E3Parser.LL_A, 0); }
		public EmailContext email() {
			return getRuleContext(EmailContext.class,0);
		}
		public TelefonoContext telefono() {
			return getRuleContext(TelefonoContext.class,0);
		}
		public RedesContext redes() {
			return getRuleContext(RedesContext.class,0);
		}
		public TerminalNode LL_C() { return getToken(E3Parser.LL_C, 0); }
		public ContactoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contacto; }
	}

	public final ContactoContext contacto() throws RecognitionException {
		ContactoContext _localctx = new ContactoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_contacto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(CONTACTO);
			setState(173);
			match(LL_A);
			setState(174);
			email();
			setState(175);
			telefono();
			setState(176);
			redes();
			setState(177);
			match(LL_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EmailContext extends ParserRuleContext {
		public TerminalNode EMAIL() { return getToken(E3Parser.EMAIL, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode MAIL() { return getToken(E3Parser.MAIL, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public EmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_email; }
	}

	public final EmailContext email() throws RecognitionException {
		EmailContext _localctx = new EmailContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_email);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(EMAIL);
			setState(180);
			match(PA_A);
			setState(181);
			match(MAIL);
			setState(182);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TelefonoContext extends ParserRuleContext {
		public TerminalNode TELEFONO() { return getToken(E3Parser.TELEFONO, 0); }
		public TerminalNode PA_A() { return getToken(E3Parser.PA_A, 0); }
		public TerminalNode TFNO() { return getToken(E3Parser.TFNO, 0); }
		public TerminalNode PA_C() { return getToken(E3Parser.PA_C, 0); }
		public TelefonoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_telefono; }
	}

	public final TelefonoContext telefono() throws RecognitionException {
		TelefonoContext _localctx = new TelefonoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_telefono);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(TELEFONO);
			setState(185);
			match(PA_A);
			setState(186);
			match(TFNO);
			setState(187);
			match(PA_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
